import java.util.ArrayList;

public class Administrator {


    public void addMedia(Media m, ArrayList<Media>list){

    }
    public void removeMedia(Media m, ArrayList<Media>list){

    }

    @Override
    public String toString() {
        return super.toString();
    }
}




