import java.util.ArrayList;

public class Season {
    private int seasonNumber;
    private int year;
    private ArrayList<Episode> episodes;

    public Season(int seasonNumber, int year) {
        this.seasonNumber = seasonNumber;
        this.year = year;
        this.episodes = new ArrayList<>();
    }

    public int getSeasonNumber(){
        return seasonNumber;
    }

    public ArrayList<Episode> getEpisodes() {
        return episodes;
    }

    public void addEpisode(Episode e) {
        episodes.add(e);
    }

    @Override
    public String toString() {
        return super.toString();
    }
}
