@startuml
!pragma layout smetana

title Class Diagram - Streaming Service

' ===== Classes =====
abstract class Media {
  - String title
  - int releaseYear
  - double rating
  - ArrayList<Category> categories
  + String getTitle()
  + int getReleaseYear()
  + double getRating()
  + void addCategory(Category c)
  + void play()
}

class Movie {
  - int duration
  + int getDuration()
  + void play()
  + String toString()
}

class Series {
  - ArrayList<Season> seasons
  + ArrayList<Season> getSeasons()
  + void addSeason(Season s)
  + int getNumberOfSeasons()
  + void play()
  + String toString()
}

class Season {
  - int seasonNumber
  - int year
  - ArrayList<Episode> episodes
  + int getSeasonNumber()
  + ArrayList<Episode> getEpisodes()
  + void addEpisode(Episode e)
  + String toString()
}

class Episode {
  - String title
  - int episodeNumber
  - int duration
  + String getTitle()
  + int getEpisodeNumber()
  + String toString()
}

enum Category {
  CRIME
  WAR
  DRAMA
  FAMILY
  ROMANCE
  SCI_FI
}

class User {
  - String username
  - String password
  - ArrayList<Media> watched
  - ArrayList<Media> saved
  + String getUsername()
  + boolean checkLogin(String password)
  + void addToWatched(Media m)
  + void addToSaved(Media m)
  + void removeFromSaved(Media m)
  + ArrayList<Media> getWatched()
  + ArrayList<Media> getSaved()
  + String toString()
}

class Administrator {
  + void addMedia(Media m, ArrayList<Media> list)
  + void removeMedia(Media m, ArrayList<Media> list)
  + String toString()
}

class StreamingService {
  - ArrayList<Media> mediaList
  - ArrayList<User> userList
  - TextUI ui
  - FileIO fileIO
  + void startSystem()
  + void registerUser()
  + void loginUser()
  + void findMedia()- måske slet
  - Category parseCategory(String genre)
  - Arraylist<User>loadUsers()
  - void saveUsers()
  - void showStartMenu()
  - void showMainMenu()
}


package "util"{
class FileIO {
  + ArrayList<User> loadUsers()
  + void saveUser(User u)
}

class TextUI {
  + void start()
  + void showMenu()
}
}

'Inheritance
Movie --|> Media
Series --|> Media
Administrator --|> User

'Composition
Series *-- Season
Season *-- Episode

'Associations
Media -- Category
User -- Media
StreamingService -- User
StreamingService -- Media
FileIO -- User
TextUI -- StreamingService

@enduml